remove temp color contrast fix, using color-mix() function, for messages

--- a/UI/src/css/molecules/m-message.css
+++ b/UI/src/css/molecules/m-message.css
@@ -19,7 +19,7 @@
 /* Uses color-mix() function to fix a11y color contrast. */
 .m-message-error {
     background-color: rgba(var(--color-error), 0.15);
-    color: color-mix(in srgb, rgb(var(--color-error)) 80%, var(--color-text));
+    color: rgb(var(--color-error));
 
     &::before {
         background-image: url('../../images/icon-error.svg');
@@ -28,7 +28,7 @@
 
 .m-message-warning {
     background-color: rgba(var(--color-warning), 0.15);
-    color: color-mix(in srgb, rgb(var(--color-warning)) 45%, var(--color-text));
+    color: rgb(var(--color-warning));
 
     &::before {
         background-image: url('../../images/icon-warning.svg');
@@ -37,7 +37,7 @@
 
 .m-message-success {
     background-color: rgba(var(--color-success), 0.15);
-    color: color-mix(in srgb, rgb(var(--color-success)) 45%, var(--color-text));
+    color: rgb(var(--color-success));
 
     &::before {
         background-image: url('../../images/icon-success.svg');
@@ -46,11 +46,7 @@
 
 .m-message-information {
     background-color: rgba(var(--color-information), 0.15);
-    color: color-mix(
-        in srgb,
-        rgb(var(--color-information)) 60%,
-        var(--color-text)
-    );
+    color: rgb(var(--color-information));
 
     &::before {
         background-image: url('../../images/icon-information.svg');
